[package]
name = "thorstream"
version = "0.1.0"
edition = "2021"
description = "Fast Kafka-like append-only event streaming platform with Kafka consumer compatibility"
authors = ["Thorstream"]
license = "MIT"

[dependencies]
tokio = { version = "1.41", features = ["sync", "io-util", "net", "rt-multi-thread", "macros", "fs"] }
bytes = "1.0"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[[bin]]
name = "thorstream"
path = "src/bin/server.rs"
