[package]
name = "thorstream"
version = "0.1.0"
edition = "2021"
description = "Fast Kafka-like append-only event streaming platform with Kafka consumer compatibility"
authors = ["Thorstream"]
license = "MIT"

[dependencies]
tokio = { version = "1.41", features = ["sync", "io-util", "net", "rt-multi-thread", "macros", "fs"] }
bytes = "1.0"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bincode = "1.3"
axum = { version = "0.7", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
rdkafka = { version = "0.36", features = ["tokio"] }
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "thorstream"
path = "src/bin/server.rs"

[[bench]]
name = "throughput"
harness = false
